about screen image cut off fix on moblie

--- a/app.css
+++ b/app.css
@@ -500,7 +500,7 @@ base {
 	}
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 415px) {
 	.header1{
 		font-size:40px !important;
 		line-height:1 !important;
